--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,28 @@
     <title>Givenchy</title>
 </head>
 
-<body>
+<body class="page">
+    <header class="header">
+        <div class="header__conteiner">
+            <nav class="header__nav">
+                <div class="header__nav-close-button"></div>
+                <ul class="header__list">
+                    <li class="header__list-item">ABOUT</li>
+                    <li class="header__list-item">LOOKS</li>
+                    <li class="header__list-item">SUBSCRIBE</li>
+                </ul>
+            </nav>
+            <div class="header__burger-menu">
+                <p class="header__menu-title">MENU</p>
+                <span class="header__span"></span>
+            </div>
+            <div class="header__main-theme">
+                <h1 class="header__title">GIVENCHY<br> SPRING SUMMER 2021<br> BY MATTHEW M. WILLIAMS
+                </h1>
+                <button class="header__button">Subscribe to collection’s news</button>
+            </div>
+        </div>
+    </header>
 
 </body>
 
