--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <section class="about">
             <h2 id="str" class="about__title">ABOUT</h2>
             <p id="sec" class="about__subtitle about_type_invisible ">The Spring-Summer ‘21 collection explores Givenchy in the form of a stream of consciousness for Williams and is a ‘sampler’ of what is to come.</p>
-            <blockquote id="pre" class="about__article about_type_undercover">“To me, fashion expresses a point of view where formality and informality, construction and comfort co-exist. My ethos is about the luxury of infusing clothes with your own personality, not being worn by them,”</blockquote>
+            <blockquote id="pre" class="about__article "></blockquote>
             <img class="about__image-first" src="./images/first.svg" alt="kartinka">
             <img class="about__image-second" src="./images/second.svg" alt="kartinki">
             <article class="about__subtitle about_type-center">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner, Bella Hadid, Playboi Carti and the supermodels
