--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,14 @@
     <main class="content">
         <section class="about">
             <h2 id="str" class="about__title">ABOUT</h2>
-            <p id="sec" class="about__subtitle about_type_invisible ">The Spring-Summer ‘21 collection explores Givenchy in the form of a stream of consciousness for Williams and is a ‘sampler’ of what is to come.</p>
-            <blockquote id="pre" class="about__article "></blockquote>
+            <p id="sec" class="about__subtitle about_type_invisible">The Spring-Summer ‘21 collection explores Givenchy in the form of a stream of consciousness for Williams and is a ‘sampler’ of what is to come.</p>
+            <blockquote id="pre" class="about__article"></blockquote>
             <img class="about__image-first" src="./images/first.svg" alt="kartinka">
             <img class="about__image-second" src="./images/second.svg" alt="kartinki">
-            <article class="about__subtitle about_type-center">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner, Bella Hadid, Playboi Carti and the supermodels
+            <article id="three" class="about__subtitle about_type-center about_type_invisible">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner, Bella Hadid, Playboi Carti and the supermodels
                 Anok Yai and Liam Powers were each invited to put their own stamp on key pieces, the better to highlight the importance of cultivating a powerful personal style.
             </article>
-            <blockquote class="about__article">“In each of these portraits, a strong character wears a look that reflects who they are: they’re the ones who bring the clothes to life.”</blockquote>
+            <blockquote id="end" class="about__article"></blockquote>
             <img class="about__image-third" src="./images/third.svg" alt="kartinka">
         </section>
 
