--- a/src/index.html
+++ b/src/index.html
@@ -37,17 +37,43 @@
             <h2 id="str" class="about__title">ABOUT</h2>
             <p id="sec" class="about__subtitle about_type_invisible">The Spring-Summer ‘21 collection explores Givenchy in the form of a stream of consciousness for Williams and is a ‘sampler’ of what is to come.</p>
             <blockquote id="pre" class="about__article"></blockquote>
-            <img class="about__image-first" src="./images/first.svg" alt="kartinka">
-            <img class="about__image-second" src="./images/second.svg" alt="kartinki">
+            <img class="about__image-first" src="./images/first.svg" alt="kartinka" />
+            <img class="about__image-second" src="./images/second.svg" alt="kartinki" />
             <article id="three" class="about__subtitle about_type-center about_type_invisible">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner, Bella Hadid, Playboi Carti and the supermodels
                 Anok Yai and Liam Powers were each invited to put their own stamp on key pieces, the better to highlight the importance of cultivating a powerful personal style.
             </article>
             <blockquote id="end" class="about__article"></blockquote>
-            <img class="about__image-third" src="./images/third.svg" alt="kartinka">
+            <img class="about__image-third" src="./images/third.svg" alt="kartinka" />
+        </section>
+        <section class="looks">
+            <h2 class="looks__title">LOOKS</h2>
+            <ul class="looks__gallery">
+                <li class="looks__item"><img class="looks__image" src="./images/photo8.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo7.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo6.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo5.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo4.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo3.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo2.svg" alt="tut kartinka modnaya" /></li>
+                <li class="looks__item"><img class="looks__image" src="./images/photo1.svg" alt="tut kartinka modnaya" /></li>
+            </ul>
         </section>
 
     </main>
-
+    <footer class="footer">
+        <div class="footer__conteiner">
+            <h3 class="footer__title">Subscribe to the newsletter and be the first to know about new collection’s drop date and news</h3>
+            <form name="submit_form" class="footer__form" method="post">
+                <input class="footer__email-input" type="email" placeholder="Enter your email  here" />
+                <input class="footer__button" type="button" value="SUBMIT" />
+            </form>
+            <input type="checkbox" class="footer__switcher" id="footer-switcher" />
+            <label for="footer-switcher" class="footer__hide-input"></label>
+            <p class="footer__label">I consent to the processing of my data by GIVENCHY in accordance with the conditions set forth in the Privacy Policy</p>
+            <p class="footer__copyright">© 2021, Givenchy. Some rights reserved</p>
+        </div>
+    </footer>
+    <button class="button"></button>
 </body>
 
 </html>
