validyty fo form done

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             <h3 class="footer__title">Subscribe to the newsletter and be the first to know about new collection’s drop date and news</h3>
             <form name="submit_form" class="footer__form" method="post">
                 <input class="footer__email-input" type="email" placeholder="Enter your email  here" />
-                <input class="footer__button" type="button" value="SUBMIT" />
+                <input class="footer__button" type="button" value="SUBMIT" disabled />
             </form>
             <input type="checkbox" class="footer__switcher" id="footer-switcher" />
             <label for="footer-switcher" class="footer__hide-input"></label>
@@ -73,7 +73,7 @@
             <p class="footer__copyright">© 2021, Givenchy. Some rights reserved</p>
         </div>
     </footer>
-    <button class="button"></button>
+
 </body>
 
 </html>
