--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Короткое представление новой коллекции моды" />
     <meta name="author" content="Георгий Трубачев" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="./images/123.png" type="image/png" />
     <title>Givenchy</title>
 </head>
 
